@@ -1,4 +1,4 @@
-<!-- start of $Id$ -->
+<!-- start of $Id: html_mail_header.php,v 1.17 2001/10/25 15:22:34 rossigee Exp $ -->
 <?php
 if ($verbose == 1 && $use_verbose == true)
 	echo "<tr><td class=\"mail\"><a href=\"$PHP_SELF?action=aff_mail&amp;mail=$mail&amp;verbose=0&amp;lang=".$lang."&amp;sort=".$sort."&amp;sortdir=".$sortdir."\" class=\"mail\">".$html_remove_header."</a></td>";
@@ -8,9 +8,9 @@ else
 	echo "<tr><td>&nbsp;</td>";
 
 if (($content['prev'] != '') && ($content['prev'] != 0))
-	$prev = "<a href=\"$PHP_SELF?action=aff_mail&amp;mail=".$content["prev"]."&amp;verbose=".$verbose."&amp;lang=".$lang."&amp;sort=".$sort."&amp;sortdir=".$sortdir."\"><img src=\"themes/".$theme."/img/left_arrow.gif\" alt=\"$alt_prev\" width=\"12\" height=\"12\" border=\"0\"></a>";
+	$prev = "<a href=\"$PHP_SELF?action=aff_mail&amp;mail=".$content["prev"]."&amp;verbose=".$verbose."&amp;lang=".$lang."&amp;sort=".$sort."&amp;sortdir=".$sortdir."\"><img src=\"themes/".$theme."/img/left_arrow.gif\" alt=\"$alt_prev\" border=\"0\"></a>";
 if (($content['next'] != '') && ($content['next'] != 0))
-	$next =  "<a href=\"$PHP_SELF?action=aff_mail&amp;mail=".$content["next"]."&amp;verbose=".$verbose."&amp;lang=".$lang."&amp;sort=".$sort."&amp;sortdir=".$sortdir."\"><img src=\"themes/".$theme."/img/right_arrow.gif\" alt=\"$alt_next\" width=\"12\" height=\"12\" border=\"0\"></a>";
+	$next =  "<a href=\"$PHP_SELF?action=aff_mail&amp;mail=".$content["next"]."&amp;verbose=".$verbose."&amp;lang=".$lang."&amp;sort=".$sort."&amp;sortdir=".$sortdir."\"><img src=\"themes/".$theme."/img/right_arrow.gif\" alt=\"$alt_next\" border=\"0\"></a>";
 ?>	
 <td	align="right"><?php if (isset($prev)) echo $prev; ?>&nbsp;<?php if (isset($next)) echo $next; ?></td></tr>
 <tr><td align="right" class="mail"><?php echo $html_from ?></td><td bgcolor="<?php echo $glob_theme->mail_properties ?>" class="mail"><b><?php echo $content["from"] ?></b></td></tr>
@@ -37,4 +37,4 @@ if ($content['subject'] == '')
 <tr><td colspan="2" bgcolor="<?php echo $glob_theme->mail_color ?>" class="mail"><pre><?php echo $content['header'] ?></pre><br />
 <?php //echo @convert_cyr_string($content['body'], $content['charset'], $charset); ?>
 <?php echo $content['body'] ?>
-<!-- end of $Id$ -->
+<!-- end of $Id: html_mail_header.php,v 1.17 2001/10/25 15:22:34 rossigee Exp $ -->
